--- a/package.json
+++ b/package.json
@@ -10,6 +10,18 @@
   "author": "Alexey Korkota",
   "license": "MIT",
   "devDependencies": {
+    "babel-core": "^6.24.0",
+    "babel-loader": "^6.4.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.2.2",
     "webpack": "^2.2.1"
+  },
+  "engines": {
+    "node": "7.7.3",
+    "npm": "4.4.1"
+  },
+  "private": true,
+  "dependencies": {
+    "babel-runtime": "^6.23.0"
   }
 }
