--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "private": true,
   "dependencies": {
     "babel-runtime": "^6.23.0",
+    "lodash": "^4.17.4",
     "moment": "^2.18.0"
   }
 }
