--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "devDependencies": {
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
-    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-env": "^1.2.2",
     "webpack": "^2.2.1"
   },
@@ -23,7 +23,7 @@
   },
   "private": true,
   "dependencies": {
-    "babel-runtime": "^6.23.0",
+    "babel-polyfill": "^6.23.0",
     "lodash": "^4.17.4",
     "moment": "^2.18.0",
     "whatwg-fetch": "^2.0.3"
