--- a/.editorconfig
+++ b/.editorconfig
@@ -1,14 +1,13 @@
+root = true
+
 [*]
-charset=utf-8
-end_of_line=lf
-insert_final_newline=true
-indent_style=space
-indent_size=4
+charset = utf-8
+end_of_line = lf
+insert_final_newline = true
+indent_style = space
+indent_size = 4
+trim_trailing_whitespace = true
 
-[{.eslintrc,.babelrc,.stylelintrc,*.json,*.jsb3,*.jsb2,*.bowerrc}]
-indent_style=space
-indent_size=2
-
-[{*.applejs,*.js}]
-indent_style=space
-indent_size=2
+[{.eslintrc,.babelrc,*.bowerrc,*.json,*.js,*.jade,*.css,*.styl}]
+indent_style = space
+indent_size = 2
