--- a/package.json
+++ b/package.json
@@ -11,10 +11,17 @@
   "author": "Alexey Korkota",
   "license": "MIT",
   "devDependencies": {
+    "autoprefixer-loader": "^3.2.0",
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-env": "^1.2.2",
+    "css-loader": "^0.27.3",
+    "file-loader": "^0.10.1",
+    "jade": "^1.11.0",
+    "jade-loader": "^0.8.0",
+    "style-loader": "^0.16.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1",
     "webpack": "^2.2.1"
   },
   "engines": {
