--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "babel-loader": "^6.4.1",
     "babel-preset-env": "^1.2.2",
     "css-loader": "^0.27.3",
+    "html-webpack-plugin": "^2.28.0",
     "jade": "^1.11.0",
     "jade-loader": "^0.8.0",
+    "rimraf": "^2.6.1",
     "style-loader": "^0.16.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
