--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Learning webpack.",
   "main": "app.js",
   "scripts": {
+    "start": "npm run build && webpack-dev-server --content-base=public/ --inline --open",
     "build": "webpack --config webpack.config.js",
     "build:profile": "webpack --config webpack.config.js --profile --display-reasons --display-modules",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -19,12 +20,12 @@
     "html-webpack-plugin": "^2.28.0",
     "jade": "^1.11.0",
     "jade-loader": "^0.8.0",
-    "rimraf": "^2.6.1",
     "style-loader": "^0.16.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "url-loader": "^0.5.8",
-    "webpack": "^2.2.1"
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.4.2"
   },
   "engines": {
     "node": "7.7.3",
