--- a/package.json
+++ b/package.json
@@ -2,24 +2,35 @@
   "name": "webpacking",
   "version": "1.0.0",
   "description": "Learning webpack.",
-  "main": "app.js",
   "scripts": {
-    "start": "npm run build && webpack-dev-server --content-base=public/ --inline --open",
+    "start": "webpack-dev-server",
     "build": "webpack --config webpack.config.js",
     "build:profile": "webpack --config webpack.config.js --profile --display-reasons --display-modules",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Alexey Korkota",
-  "license": "MIT",
+  "dependencies": {
+    "babel-polyfill": "^6.23.0",
+    "flag-icon-css": "^2.8.0",
+    "lodash": "^4.17.4",
+    "moment": "^2.18.0",
+    "react": "^15.3.0",
+    "react-dom": "^15.3.0",
+    "whatwg-fetch": "^2.0.3"
+  },
   "devDependencies": {
     "autoprefixer-loader": "^3.2.0",
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
     "babel-preset-env": "^1.2.2",
+    "babel-preset-react": "^6.11.1",
     "css-loader": "^0.27.3",
+    "exports-loader": "^0.6.4",
     "html-webpack-plugin": "^2.28.0",
+    "imports-loader": "^0.7.1",
     "jade": "^1.11.0",
     "jade-loader": "^0.8.0",
+    "postcss-loader": "^0.9.1",
+    "react-hot-loader": "^3.0.0-beta.6",
     "style-loader": "^0.16.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
@@ -32,11 +43,6 @@
     "npm": "4.4.1"
   },
   "private": true,
-  "dependencies": {
-    "babel-polyfill": "^6.23.0",
-    "flag-icon-css": "^2.8.0",
-    "lodash": "^4.17.4",
-    "moment": "^2.18.0",
-    "whatwg-fetch": "^2.0.3"
-  }
+  "author": "Alexey Korkota",
+  "license": "MIT"
 }
